[gd_scene load_steps=14 format=3 uid="uid://bmuafmq7w5vma"]

[ext_resource type="Script" path="res://session/virtual_remote_hub/virtual_remote_hub_offline.gd" id="1_xqj05"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/space.gd" id="2_06oiq"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/player/modules/Player.gd" id="3_y21bn"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/player/modules/PlayerMotionSync.gd" id="4_k1vny"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/player/modules/ChunkProjector.gd" id="5_72gah"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/player/modules/ChunkObserver.gd" id="6_f7w6r"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/player/modules/UnifiedChunkObserver.gd" id="7_exkpu"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/player/modules/NodeCreator.gd" id="8_kw6rx"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/player/modules/LinkCreator.gd" id="9_n1kd6"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/modules/Chunk.gd" id="10_2fufw"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/player/modules/CommandHandler.gd" id="10_4otho"]
[ext_resource type="Script" path="res://session/virtual_remote_hub/space/modules/CommandManager/CommandManager.gd" id="11_udm7a"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8c2hq"]

[node name="virtual_remote_hub" type="Node"]
script = ExtResource("1_xqj05")

[node name="space" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_06oiq")

[node name="offline_player" type="CharacterBody3D" parent="space"]
unique_name_in_owner = true
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="space/offline_player"]
shape = SubResource("SphereShape3D_8c2hq")
disabled = true

[node name="head" type="Node3D" parent="space/offline_player"]

[node name="CSGBox3D" type="CSGBox3D" parent="space/offline_player/head"]
size = Vector3(0.25, 0.25, 0.6)

[node name="player_modules" type="Node" parent="space/offline_player"]
unique_name_in_owner = true

[node name="Player" type="Node" parent="space/offline_player/player_modules"]
script = ExtResource("3_y21bn")

[node name="PlayerMotionSync" type="Node" parent="space/offline_player/player_modules"]
script = ExtResource("4_k1vny")

[node name="ChunkProjector" type="Node" parent="space/offline_player/player_modules"]
script = ExtResource("5_72gah")

[node name="ChunkObserver" type="Node" parent="space/offline_player/player_modules"]
script = ExtResource("6_f7w6r")

[node name="UnifiedChunkObserver" type="Node" parent="space/offline_player/player_modules"]
script = ExtResource("7_exkpu")

[node name="NodeCreator" type="Node" parent="space/offline_player/player_modules"]
script = ExtResource("8_kw6rx")

[node name="LinkCreator" type="Node" parent="space/offline_player/player_modules"]
script = ExtResource("9_n1kd6")

[node name="CommandHandler" type="Node" parent="space/offline_player/player_modules"]
script = ExtResource("10_4otho")

[node name="space_modules" type="Node" parent="space"]
unique_name_in_owner = true

[node name="Chunk" type="Node" parent="space/space_modules"]
script = ExtResource("10_2fufw")

[node name="observation_queue_handle_tick" type="Timer" parent="space/space_modules/Chunk"]
wait_time = 0.1

[node name="unload_queue_handle_tick" type="Timer" parent="space/space_modules/Chunk"]

[node name="broadcast_chunk_update_tick" type="Timer" parent="space/space_modules/Chunk"]

[node name="intobject_pre_allocation_tick" type="Timer" parent="space/space_modules/Chunk"]

[node name="CommandManager" type="Node" parent="space/space_modules"]
script = ExtResource("11_udm7a")
